public class PostalStatement extends BankStatement{

    public void send(){
        System.out.println("Sending statement in post");
    }
}
