@startuml
skinparam classAttributeIconSize 0


title __Bank Statement Class Diagram__\n

abstract class BankAccount {
    - accHolder: Person
    # balance : double
    - accNum : int
    - {static} bankCard : BankCard
    - observers : ArrayList<Observer>
    + BankAccount()
    + BankAccount(accHolder: Person, accNum: int,
    balance: double, bankCard: BankCard)
    + getBalance(): double
    + setBalance(balance: double): void
    + deposit(amountDeposited: double): void
    + withdraw(amountWithdrawn: double): void
    + registerObserver(observer: Observer):void
    + removeObserver(observer: Observer):void
    + notifyObservers():void
    + toString() : String
    {abstract} + describeAccount() : String
 }

 abstract class BankStatement {
    - transactions : ArrayList<String>
    - statement : String
    {abstract} + createBankStatement(account: BankAccount): void
    - getAllAccountTransactions(account: BankAccount): void
    - addTransactionsToStatement(): void
    + addAccountBalanceToStatement(account: BankAccount): void
    - printStatement(): void
 }

 class PostalStatement {
    + createBankStatement(account: BankAccount): void
    - sendInPost(): void
 }

 class OnlineStatement {
    + createBankStatement(account: BankAccount): void
    - sendOnline(): void
 }

  BankAccount *-left- BankStatement : gets
  PostalStatement -up-|> BankStatement
  OnlineStatement -up-|> BankStatement

@enduml
